--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -63,12 +63,25 @@
             display: flex;
             flex-direction: column;
             gap: 30px;
-
+            
             .conections{
                 display: flex;
                 gap: 30px;
                 flex-wrap: wrap;
             }
+        }
+    }
+    .usWhy{
+        display: flex;
+        gap: 30px;
+        flex-direction: column;
+
+        strong{
+            color: #940757 !important;
+            font-size: 34px;
+        }
+        span{
+            color: #D86A23;
         }
     }
 
