--- a/src/components/CardConection/CardConection.scss
+++ b/src/components/CardConection/CardConection.scss
@@ -1,7 +1,7 @@
 .CardConection {
     cursor: pointer;
     width: 350px;
-    height: 350px;
+    height: 400px;
     border-radius: 10px;
     background-image: url('../../assets/card.png');
     -webkit-box-shadow: 2px 6px 10px 3px rgba(224, 224, 224, 1);
@@ -34,6 +34,13 @@
 
     .description {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        p{
+            font-size: 12px;
+        }
 
         h4 {
             text-align: justify;
@@ -41,7 +48,7 @@
             display: -webkit-box;
             -webkit-box-orient: vertical;
             overflow: hidden;
-            -webkit-line-clamp: 5;
+            -webkit-line-clamp: 4;
         }
 
         .cBton {
