--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,6 +10,21 @@
         align-items: center;
         justify-content: space-between;
 
+        .nameLogo{
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            height: 100%;
+
+            strong{
+                color: #940757 !important;
+                font-size: 24px;
+            }
+            span{
+                color: #D86A23;
+            }
+        }
+
         img{
             width: 80px;
             height: 40px;
