--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -4,6 +4,23 @@
     background-image: url('../../assets/image-login.png');
     display: grid;
     place-items: center;
+    position: relative;
+
+    .nameLogo{
+        display: flex;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        gap: 10px;
+        align-items: center;
+        strong{
+            color: #940757 !important;
+            font-size: 24px;
+        }
+        span{
+            color: #D86A23;
+        }
+    }
 
     .cInfoLogin {
         width: 350px;
@@ -43,8 +60,7 @@
     }
     .cGoogle{
         border: 1px solid gray;
-        border-radius: 10px;
-        padding: 5px;
+        // border-radius: 10px;
     }
     .googleButton{
         border-radius: 50px !important;
