--- a/src/components/OptionalButton/OptionalButton.scss
+++ b/src/components/OptionalButton/OptionalButton.scss
@@ -1,4 +1,4 @@
-.secundary{
+.optionalButton{
     min-width: 150px;
     // width: 100%;
     white-space: nowrap;
@@ -7,8 +7,8 @@
     padding: 0 20px;
     border-radius: 5px;
     border: none;
-    background: #940757 ;
-    color: white;
+    background: white ;
+    color: #940757;
     font-size: 14px;
     font-weight: 600;
 
